--- a/index.html
+++ b/index.html
@@ -111,6 +111,21 @@ https://drive.google.com/file/d/1XrVrHQIqw9tolo5-rGnYdS9urhcKUT8o/view?usp=shari
     <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/XpPWHapYeQE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+    我負責的部分:
+    <div>
+        <video controls>
+          <source src="lab5S01.mp4" type="video/mp4">
+        </video>
+        <video controls>
+          <source src="p4.mp4" type="video/mp4">
+        </video>
+        <video controls>
+          <source src="lab5_boom.mp4" type="video/mp4">
+        </video>
+        <video controls>
+          <source src="lab5_head.mp4" type="video/mp4">
+        </video>
+    </div>
 
 
 </body>
